--- a/src/index.css
+++ b/src/index.css
@@ -107,3 +107,11 @@ a {
   font-weight: 400;
   font-size: 1rem;  
 }
+
+.imputForm, .btnAT:hover, .btnAT:focus{
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 400;
+  font-size: 1.1rem;
+  box-shadow: none !important;
+  border-color: #004369 !important;
+}
